create react app

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "food-delivery-app",
   "version": "1.0.0",
   "description": "This is a Food Delivery app by Manish Kumar",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -10,6 +9,14 @@
   "author": "Manish Kumar",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.12.0"
-  }
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "browsersList": [
+    "last 2 versions"
+  ]
 }
